# secret-generator-rs

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: build.yaml
examples/: secret-generaotor-test-0.yaml  secret-generator-samples.yaml
manifests/: kustomization.yaml
manifests/base/: crd.yaml  dep.yaml  rbac.yaml
src/: crd.rs  finalizer.rs  main.rs  secretgenerator.rs
src/backend/: vault.rs
