[package]
name = "secret-generator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.66.0", features = ["runtime","derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
serde_yaml = "0.8.21"
env_logger = "0.9.0"
anyhow = "1.0.44"
schemars = "0.8.6"
yaml-rust = "0.4"
kube-derive = "0.66" # Support for Custom Resource Definitions
kube-runtime = "0.66    " # Custom controller support
futures = "0.3"
rand = "0.8.4"
thiserror = "1" # Custom Error definitions and convenient error mappings
byte_string = "1.0.0"
base64 = "0.13.0"
hashicorp_vault = "2.1.0"
url = "2.2.2"
